test/expected/declare_hc16.out
declare x as short char16_t
        ^
9: error: "short char16_t" is illegal for built-in type
